Avoid nullptr access

When we get a bogus file bbox() may be null and accessing it will crash the thumbnailer.

CHANGELOG: Fixed crash when trying to generate a thumbnail for bogus .eps files

BUG: 399896
FIXED-IN: 18.08.3

Differential Revision: https://phabricator.kde.org/D16290